// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HistoryOverlay.vue matches snapshot - no games 1`] = `
<gameoverlay-stub centercontent="true" btnclose="[Function]" data-test="history-overlay">
  History
  <!---->
  <p data-test="game-history-no-games-msg">
    You have not played any games yet
  </p>
</gameoverlay-stub>
`;

exports[`HistoryOverlay.vue matches snapshot - with games 1`] = `
<gameoverlay-stub centercontent="true" btnclose="[Function]" data-test="history-overlay">
  History
  <gamehistory-stub></gamehistory-stub>
  <!---->
</gameoverlay-stub>
`;
